--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,4 @@
-﻿annotated-types==0.6.0
-anyio==4.0.0
-arabic-reshaper==3.0.0
-asgiref==3.7.2
-asn1crypto==1.5.1
-cachetools==5.3.2
-certifi==2023.7.22
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cryptography==41.0.7
-cssselect2==0.7.0
-defusedxml==0.7.1
-deprecation==2.1.0
-distlib==0.3.7
+annotated-types==0.6.0
 Django==4.2.6
 django-allauth==0.59.0
 django-cors-headers==4.3.1
@@ -23,74 +7,39 @@ django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.0
-et-xmlfile==1.1.0
 Faker==21.0.0
-filelock==3.13.0
-google-api-core==2.15.0
-google-api-python-client==2.111.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.0
-googleapis-common-protos==1.62.0
-gotrue==1.3.0
-gspread==5.12.3
-gspread-dataframe==3.3.1
 gunicorn==21.2.0
-h11==0.14.0
-html5lib==1.1
 httpcore==0.17.3
 httplib2==0.22.0
 httpx==0.24.1
-idna==3.4
-lxml==5.1.0
-oauth2client==4.1.3
 oauthlib==3.2.2
-openpyxl==3.1.2
 oscrypto==1.3.0
-packaging==23.2
-pandas==2.1.4
-pillow==10.2.0
-platformdirs==3.11.0
 postgrest==0.13.0
-protobuf==4.25.1
 psycopg2-binary==2.9.9
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
 Pygments==2.16.1
 pyHanko==0.21.0
-pyhanko-certvalidator==0.26.3
 PyJWT==1.7.1
 pyparsing==3.1.1
 pypdf==4.0.1
 pypng==0.20220715.0
-python-bidi==0.4.2
-python-dateutil==2.8.2
-python3-openid==3.2.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 qrcode==7.4.2
 realtime==1.0.0
+reportlab==4.0.9
 requests==2.31.0
 requests-oauthlib==1.3.1
-rsa==4.9
 setuptools==68.2.2
-six==1.16.0
-sniffio==1.3.0
 sqlparse==0.4.4
 storage3==0.6.1
 StrEnum==0.4.15
-supafunc==0.3.1
 svglib==1.5.1
-tinycss2==1.2.1
-typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.2
 uritemplate==4.1.1
 uritools==4.0.2
 urllib3==2.0.7
 virtualenv==20.24.6
-webencodings==0.5.1
-websockets==10.4
-
